fix(variants): prevent lg-link from overiding lg-btn styles
The `lg-link` mixin is used to style links inside the variant CSS (e.g. for success, error
variants). However it was causing layout issues as it was clashing with the `.lg-btn` styles. This
is because the links inside varaint CSS were gaining higher specifity. Adding `a:not(.lg-btn)`
prevents this from happening.

--- a/projects/canopy/src/styles/mixins.scss
+++ b/projects/canopy/src/styles/mixins.scss
@@ -144,7 +144,7 @@ $breakpoints: (
   background-color: var(--#{$variant}-bg-color) !important;
   color: var(--#{$variant}-color) !important;
 
-  a {
+  a:not(.lg-btn) {
     @include lg-link(
       $default-color: var(--#{$variant}-link-color),
       $hover-color: var(--#{$variant}-link-hover-color),
